--- a/android/app/src/main/res/layout/product_layout.xml
+++ b/android/app/src/main/res/layout/product_layout.xml
@@ -2,6 +2,8 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/product"
     android:layout_width="fill_parent"
     android:layout_height="180dp"
     android:layout_gravity="center"
@@ -12,7 +14,8 @@
     android:paddingRight="4dp"
     card_view:cardElevation="6dp"
     android:divider="@null"
-    android:dividerHeight="0dp">
+    android:dividerHeight="0dp"
+    android:clickable="true">
 
 <LinearLayout
     android:layout_width="fill_parent"
