--- a/android/app/src/main/res/layout/product_layout.xml
+++ b/android/app/src/main/res/layout/product_layout.xml
@@ -15,7 +15,8 @@
     card_view:cardElevation="6dp"
     android:divider="@null"
     android:dividerHeight="0dp"
-    android:clickable="true">
+    android:clickable="true"
+    android:background="?android:selectableItemBackground" >
 
 <LinearLayout
     android:layout_width="fill_parent"
